--- a/src/test_integration/Demo - Scripted Model Construction.ipynb
+++ b/src/test_integration/Demo - Scripted Model Construction.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo5 - Trace Parser\n",
+    "# Demo4 - Scripted Model Construction\n",
     "\n",
-    "This demo indicates the usage of pyuppaal.SimTrace."
+    "This demo indicated the usage of pyuppaal.nta."
    ]
   }
  ],
