--- a/src/test_integration/Doc_Readme.ipynb
+++ b/src/test_integration/Doc_Readme.ipynb
@@ -1,33 +1,33 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
-    "[![Documentation Status](https://readthedocs.org/projects/pyuppaal/badge/?version=latest)](https://pyuppaal.readthedocs.io/en/latest/?badge=latest)    [![Licence](https://img.shields.io/github/license/jack0chan/pyuppaal)](https://opensource.org/licenses/mit-license.php)    [![](https://img.shields.io/badge/github-Jack0Chan-blue)](https://github.com/Jack0Chan)    [![](https://img.shields.io/badge/group-HCPS-blue)](https://www.yuque.com/hcps) \n",
+    "[![Documentation Status](https://readthedocs.org/projects/pyuppaal/badge/?version=latest)](https://pyuppaal.readthedocs.io/en/latest/?badge=latest)    [![Licence](https://img.shields.io/github/license/jack0chan/pyuppaal)](https://opensource.org/licenses/mit-license.php)    [![](https://img.shields.io/badge/github-Jack0Chan-blue)](https://github.com/Jack0Chan)    [![](https://img.shields.io/badge/group-HCPS-blue)](https://www.yuque.com/hcps)\n",
     "\n",
     "`pyuppaal` is a research tool that helps you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
     "\n",
     "1. load a .xml model, just like you open a model in UPPAAL GUI;\n",
     "2. set the query, just like you edit the queries in UPPAAL GUI;\n",
     "3. verify a model with the query and options (e.g., shortest path), just like you click the \"Verify\" button in UPPAAL GUI.\n",
+    "4. universal (support Windows, Linux, MacOS).\n",
     "\n",
     "In addition to the above functions, you can also\n",
     "\n",
-    "- load a .xtr trace, and get the formatted trace data;\n",
-    "- modify templates, declaration and systems;\n",
-    "- add built-in templates such as Input, Observer, and Monitors; \n",
-    "- find all patterns of the model with certain query.\n",
-    "- [todo] analyze the *SMC* simulation results. \n",
+    "- load a `.xtr` trace, and get the formatted trace data as [SimTrace](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.tracer.SimTrace);\n",
+    "- modify NTA of UPPAAL xml model, including templates, systems, and queries, etc. ([Example]());\n",
+    "- add built-in templates such as Input, Observer, and other monitors in class [Template](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.nta.Template);\n",
+    "- find all patterns of the model with certain query with [find_all_patterns]() method;\n",
+    "- common problem solutions, such as , [fault_identification](), [fault_diagnosability](), and [fault_tolerance]();\n",
+    "- [todo] analyze the *SMC* simulation results.\n",
     "\n",
     "A [MiniProject_PipeNet](https://pyuppaal.readthedocs.io/en/latest/README.html#mini-project-pipenet) is provided to help understand how `pyppaal` can contribute to scientific research."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,14 +42,11 @@
     "Remember to set the `verifyta_path` in your first line of code.\n",
     "\n",
     "```python\n",
-    "\n",
     "pyuppaal.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
-    "\n",
     "```"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,11 +98,10 @@
     "umod = pyu.UModel(demo_path)\n",
     "umod_res = umod.verify()\n",
     "\n",
-    "assert terminal_res == umod_res"
+    "assert terminal_res == umod_res\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,12 +156,10 @@
     "# find all patterns\n",
     "all_patterns = umod.find_all_patterns()\n",
     "for i, pattern in enumerate(all_patterns):\n",
-    "    print(f'pattern{i+1}: ', pattern.untime_pattern)\n",
-    "    \n"
+    "    print(f'pattern{i+1}: ', pattern.untime_pattern)\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,11 +202,10 @@
     "# pyu.Verifytaeasy_verify(model_path=model_path_list, trace_path=trace_path_list, num_threads=20)\n",
     "p = mp.Pool()\n",
     "p.starmap(pyu.Verifyta().verify, zip(model_path_list, trace_path_list))\n",
-    "print(f'Verify with multi-threads, time usage {time.time() - t0}')"
+    "print(f'Verify with multi-threads, time usage {time.time() - t0}')\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,15 +221,24 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 6. Other Demos\n",
+    "\n",
+    "More functions can be found in the demos below.\n",
+    "\n",
+    "1. [Demo - PipeNet (find_all_patterns)](https://pyuppaal.readthedocs.io/en/latest/README.html#demo-pipenet)\n",
+    "2. [Demo - Pedestrian (find_all_patterns)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n",
+    "3. [Demo - Fault Diagnosis (fault_diagnosability, fault_identification)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n",
+    "4. [Demo - Scripted Model Construction (pyuppaal.nta)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n",
+    "5. [Demo - Trace Parser (pyuppaal.SimTrace)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +254,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "cbab80897c756e21206e83b1602264f7bed4b229d7a86fb97552ee165cb35ec2"
