--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -18,13 +18,13 @@
     "In addition to the above functions, you can also\n",
     "\n",
     "- load a `.xtr` trace, and get the formatted trace data as [SimTrace](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.tracer.SimTrace);\n",
-    "- modify NTA of UPPAAL xml model, including templates, systems, and queries, etc. ([Example]());\n",
+    "- modify NTA of UPPAAL xml model, including templates, systems, and queries, etc. ([Example](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20Scripted%20Model%20Construction.html));\n",
     "- add built-in templates such as Input, Observer, and other monitors in class [Template](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.nta.Template);\n",
-    "- find all patterns of the model with certain query with [find_all_patterns]() method;\n",
-    "- common problem solutions, such as , [fault_identification](), [fault_diagnosability](), and [fault_tolerance]();\n",
+    "- find all patterns of the model with certain query with [find_all_patterns](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.find_all_patterns) method;\n",
+    "- common problem solutions, such as , [fault_identification](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_identification), [fault_diagnosability](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_diagnosability), and [fault_tolerance](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_tolerance);\n",
     "- [todo] analyze the *SMC* simulation results.\n",
     "\n",
-    "A [MiniProject_PipeNet](https://pyuppaal.readthedocs.io/en/latest/README.html#mini-project-pipenet) is provided to help understand how `pyppaal` can contribute to scientific research."
+    "A [Demo - Pipenet](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20PipeNet.html) is provided to help understand how `pyppaal` can contribute to scientific research."
    ]
   },
   {
@@ -41,9 +41,7 @@
     "\n",
     "Remember to set the `verifyta_path` in your first line of code.\n",
     "\n",
-    "```python\n",
-    "pyuppaal.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
-    "```"
+    "`pyuppaal.set_verifyta_path(\"your/path/to/verifyta.exe\")`\n"
    ]
   },
   {
@@ -213,11 +211,10 @@
     "\n",
     "For models with multiple processes, you can use `umod.get_communication_graph()` method to visualize the sturcture of the model.\n",
     "\n",
-    "An example communication graph of a complex model in [MiniProject_PipeNet](https://pyuppaal.readthedocs.io/en/latest/README.html#mini-project-pipenet) is shown below:\n",
+    "An example communication graph of a complex model in [Demo_PipeNet](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20PipeNet.html#visualize-the-architecture) is shown below:\n",
     "\n",
     "\n",
-    "<img src=pipenet.svg \n",
-    "width=250 />"
+    "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=png)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
    ]
   },
   {
@@ -228,11 +225,11 @@
     "\n",
     "More functions can be found in the demos below.\n",
     "\n",
-    "1. [Demo - PipeNet (find_all_patterns)](https://pyuppaal.readthedocs.io/en/latest/README.html#demo-pipenet)\n",
-    "2. [Demo - Pedestrian (find_all_patterns)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n",
-    "3. [Demo - Fault Diagnosis (fault_diagnosability, fault_identification)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n",
-    "4. [Demo - Scripted Model Construction (pyuppaal.nta)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n",
-    "5. [Demo - Trace Parser (pyuppaal.SimTrace)](https://github.com/Jack0Chan/pyuppaal/blob/v1.2)\n"
+    "1. [Demo - PipeNet (find_all_patterns)](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20PipeNet.html)\n",
+    "2. [Demo - Pedestrian (find_all_patterns)](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20Pedestrian.html)\n",
+    "3. [Demo - Fault Diagnosis (fault_diagnosability, fault_identification)](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20Fault%20Diagnosis.html)\n",
+    "4. [Demo - Scripted Model Construction (pyuppaal.nta)](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20Scripted%20Model%20Construction.html)\n",
+    "5. [Demo - Trace Parser (pyuppaal.SimTrace)](https://pyuppaal.readthedocs.io/en/latest/Demo%20-%20Trace%20Parser.html)\n"
    ]
   }
  ],
