--- a/src/test_demos/Demo - PipeNet.ipynb
+++ b/src/test_demos/Demo - PipeNet.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo - PipeNet\n",
+    "# Demo1 - PipeNet\n",
     "\n",
     "We will use [demo_PipeNet.xml](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_integration/demo_PipeNet.xml) as an example to help understand how `pauppaal` can contribute to scientific research **partially observable** system."
    ]
@@ -30,7 +30,7 @@
     "\n",
     "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `T1_Min` to `T1_Max` seconds.\n",
     "\n",
-    "<img src=figs/pipeNetModel.png width=400 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetModel.png width=400 />"
    ]
   },
   {
@@ -150,9 +150,9 @@
    "source": [
     "The `Input` and `Observation` template created by `pyuppaal`. The cache file `*_pattern.xml` can be found in the same directory of the input model.\n",
     "<br><br>\n",
-    "<img src=\"figs/pipeNetInput.png\" width=300 />\n",
-    "<img src=\"figs/pipeNetObserver.png\" width=350 />\n",
-    "<img src=\"figs/pipeNetModel.png\" width=350 />\n",
+    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetInput.png\" width=300 />\n",
+    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetObserver.png\" width=350 />\n",
+    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetModel.png\" width=350 />\n",
     "<br><br>\n",
     "\n",
     "In This example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
