--- a/src/test_demos/Demo4-Scripted Model Construction.ipynb
+++ b/src/test_demos/Demo4-Scripted Model Construction.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "# Demo4 - Scripted Model Construction\n",
     "\n",
+    "**Note: we are woking on CAV-2024 tool paper. The documentation will be updated to a structure similar to Demo1-PipeNet before 2024.4.1.**\n",
+    "\n",
     "This demo indicated the usage of pyuppaal.nta, constructing the [model](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_unit/constructed_model.xml) shown below:\n",
     "\n",
-    "<img src=scripted_model_building.png width=1000 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/scripted_model_building.png width=1000 />"
    ]
   },
   {
