--- a/src/test_demos/Demo5-Trace Parser.ipynb
+++ b/src/test_demos/Demo5-Trace Parser.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Coming soon..\n",
     "\n",
-    "<img src=trace_parser.png width=1200 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/trace_parser.png width=1200 />"
    ]
   },
   {
@@ -126,8 +126,8 @@
     "\n",
     "We can infer `0 <= path.t <=30` from the red component.\n",
     "\n",
-    "<img src=conduction_1.png width=300 />\n",
-    "<img src=conduction_2.png width=300 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/conduction_1.png width=300 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/conduction_2.png width=300 />"
    ]
   },
   {
@@ -141,8 +141,8 @@
     "Clock_constraints [5]: [t(0) - gclk ≤ -50; t(0) - nodeInput.t ≤ 0; t(0) - path.t ≤ 0; gclk - t(0) ≤ 100; gclk - nodeInput.t ≤ 0; nodeInput.t - path.t ≤ 30; path.t - gclk ≤ -30; ]\n",
     "transitions [5]: None: nodeInput.Refratory -> nodeInput._id2\n",
     "\n",
-    "<img src=refractory_1.png width=300 />\n",
-    "<img src=refractory_2.png width=300 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/refractory_1.png width=300 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/refractory_2.png width=300 />"
    ]
   }
  ],
