--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -7,6 +7,7 @@
     "# Introduction\n",
     "\n",
     "[![Documentation Status](https://readthedocs.org/projects/pyuppaal/badge/?version=latest)](https://pyuppaal.readthedocs.io/en/latest/?badge=latest) \n",
+    "[![PyPI version](https://badge.fury.io/py/pyuppaal.svg)](https://badge.fury.io/py/pyuppaal)\n",
     "![](https://img.shields.io/badge/test-passing-brightgreen)\n",
     "[![Licence](https://img.shields.io/github/license/jack0chan/pyuppaal)](https://opensource.org/licenses/mit-license.php)\n",
     "[![](https://img.shields.io/badge/github-Jack0Chan-blue)](https://github.com/Jack0Chan)\n",
