--- a/src/test_demos/Demo2-Pedestrian.ipynb
+++ b/src/test_demos/Demo2-Pedestrian.ipynb
@@ -93,7 +93,7 @@
    ],
    "source": [
     "m = UModel(\"pedestrian.xml\").save_as(\"demo_pedestrian.xml\")\n",
-    "m.queries = \"A[] not (PPedestrian.Crossing and PCar.Crossing)\"\n",
+    "m.queries = \"E<> (PPedestrian.Crossing and PCar.Crossing)\"\n",
     "F = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"]\n",
     "traces = m.find_all_patterns(focused_actions=F)\n",
     "for i, trace in enumerate(traces): print(f'pattern {i+1}:', trace.untime_pattern)"
