--- a/src/test_demos/Demo3-Fault Diagnosis.ipynb
+++ b/src/test_demos/Demo3-Fault Diagnosis.ipynb
@@ -50,11 +50,11 @@
     }
    ],
    "source": [
-    "# load models, and set observations, unobvservable events\n",
+    "# load models, and set observable, unobvservable events\n",
     "m_a, m_b = UModel('model_A.xml'), UModel('model_B.xml')\n",
     "sigma_o, sigma_un = ['a', 'b', 'c'], ['f']\n",
     "\n",
-    "# n-diagnosability for fault 'f'\n",
+    "# n-diagnosability for fault 'f', for n=3\n",
     "res_a = m_a.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "res_b = m_b.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "print(f\"Model A is 3-diagnosable: {res_a[0]}.\")\n",
