change focused actions to sigma_focus

--- a/src/test_demos/Demo1-PipeNet.ipynb
+++ b/src/test_demos/Demo1-PipeNet.ipynb
@@ -134,7 +134,7 @@
     "# Focused Actions is xxxxxxxxx(if this comment is not completed, please report the issue :>, thanks)\n",
     "fc = ['exit1', 'exit2', 'exit3']\n",
     "# Add observation template.\n",
-    "pipeNet.add_observer_monitor(observations, focused_actions=fc)\n",
+    "pipeNet.add_observer_monitor(observations, sigma_focus=fc)\n",
     "\n",
     "# Query whether the model can simulate the inputs & observations\n",
     "pipeNet.queries = 'E<> Observer.pass'\n",
@@ -306,7 +306,7 @@
     "pipeNet.add_input_monitor(inputs)\n",
     "# Add observation template.\n",
     "# raise ValueError(\"这里别忘了添加focused actions\")\n",
-    "pipeNet.add_observer_monitor(observations, focused_actions=['exit1', 'exit2', 'exit3'])\n",
+    "pipeNet.add_observer_monitor(observations, sigma_focus=['exit1', 'exit2', 'exit3'])\n",
     "\n",
     "# Query whether the model can simulate the inputs & observations\n",
     "pipeNet.queries = 'E<> Observer.pass'\n",
