--- a/src/test_demos/Demo2-Pedestrian.ipynb
+++ b/src/test_demos/Demo2-Pedestrian.ipynb
@@ -95,7 +95,7 @@
     "m = UModel(\"pedestrian.xml\").save_as(\"demo_pedestrian.xml\")\n",
     "m.queries = \"E<> (PPedestrian.Crossing and PCar.Crossing)\"\n",
     "F = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"]\n",
-    "traces = m.find_all_patterns(focused_actions=F)\n",
+    "traces = m.find_all_patterns(sigma_focus=F)\n",
     "for i, trace in enumerate(traces): print(f'pattern {i+1}:', trace.untime_pattern)"
    ]
   },
