restore sifma_focus to focused actions

--- a/src/test_demos/Demo2-Pedestrian.ipynb
+++ b/src/test_demos/Demo2-Pedestrian.ipynb
@@ -94,8 +94,8 @@
    "source": [
     "m = UModel(\"pedestrian.xml\").save_as(\"demo_pedestrian.xml\")\n",
     "m.queries = \"E<> (PPedestrian.Crossing and PCar.Crossing)\"\n",
-    "F = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"]\n",
-    "traces = m.find_all_patterns(sigma_focus=F)\n",
+    "sigma_focus = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"]\n",
+    "traces = m.find_all_patterns(focused_actions=sigma_focus)\n",
     "for i, trace in enumerate(traces): print(f'pattern {i+1}:', trace.untime_pattern)"
    ]
   },
