--- a/src/test_demos/Demo3-Fault Diagnosis.ipynb
+++ b/src/test_demos/Demo3-Fault Diagnosis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,38 +35,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model A is 3-diagnosable: True.\n",
-      "Model B is 3-diagnosable: False, reason: ['c', 'a', 'b', 'a'].\n",
-      "['a', 'b', 'a'] can detect 'f'. Model A: True, Model B: False.\n",
-      "['a', 'a', 'a'] can detect 'f'. Model A: True, Model B: True.\n"
+      "['a', 'a', 'a'] can detect 'f'. Model A: True,  Model B: True.\n",
+      "['a', 'b', 'a'] can detect 'f'. Model A: False, Model B: True.\n",
+      "Model A is 3-diagnosable: False, reason: ['c', 'a', 'b', 'a'].\n",
+      "Model B is 3-diagnosable: True.\n"
      ]
     }
    ],
    "source": [
-    "# load models, and set observable, unobvservable events\n",
     "m_a, m_b = UModel('model_A.xml'), UModel('model_B.xml')\n",
     "sigma_o, sigma_un = ['a', 'b', 'c'], ['f']\n",
     "\n",
+    "# identification for fault 'f' with o1 = ['a', 'a', 'a'] and o2 = ['a', 'b', 'a']\n",
+    "o1, o2 = ['a', 'a', 'a'], ['a', 'b', 'a']\n",
+    "res1_a = m_a.fault_identification(o1, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "res1_b = m_b.fault_identification(o1, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "print(f\"{o1} can detect 'f'. Model A: {res1_a[0]},  Model B: {res1_b[0]}.\")\n",
+    "res2_a = m_a.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "res2_b = m_b.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "print(f\"{o2} can detect 'f'. Model A: {res2_a[0]}, Model B: {res2_b[0]}.\")\n",
     "# n-diagnosability for fault 'f', for n=3\n",
     "res_a = m_a.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "res_b = m_b.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "print(f\"Model A is 3-diagnosable: {res_a[0]}.\")\n",
-    "print(f\"Model B is 3-diagnosable: {res_b[0]}, reason: {res_b[1].untime_pattern}.\")\n",
-    "# identification for fault 'f' with o1 = ['a', 'b', 'a'] and o2 = ['a', 'a', 'a']\n",
-    "o1, o2 = ['a', 'b', 'a'], ['a', 'a', 'a']\n",
-    "res1_a = m_a.fault_identification(o1, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "res1_b = m_b.fault_identification(o1, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "print(f\"{o1} can detect 'f'. Model A: {res1_a[0]}, Model B: {res1_b[0]}.\")\n",
-    "res2_a = m_a.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "res2_b = m_b.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "print(f\"{o2} can detect 'f'. Model A: {res2_a[0]}, Model B: {res2_b[0]}.\")"
+    "print(f\"Model A is 3-diagnosable: {res_a[0]}, reason: {res_a[1].untime_pattern}.\")\n",
+    "print(f\"Model B is 3-diagnosable: {res_b[0]}.\")"
    ]
   }
  ],
