--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -74,19 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1.2.0\n",
       "Writing example trace to demo-1.xtr\n",
       "Options for the verification:\n",
       "  Generating shortest trace\n",
       "  Search order is breadth first\n",
       "  Using conservative space optimisation\n",
-      "  Seed is 1705043788\n",
+      "  Seed is 1705648037\n",
       "  State space representation uses minimal constraint systems\n",
       "\u001b[2K\n",
       "Verifying formula 1 at /nta/queries/query[1]/formula\n",
@@ -98,9 +99,9 @@
    "source": [
     "import pyuppaal as pyu\n",
     "\n",
-    "VERIFYTA_PATH = \"uppaal\\\\uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "print(pyu.__version__)\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
+    "pyu.set_verifyta_path(r\"C:\\Users\\Taco\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
     "\n",
     "demo_path = 'demo.xml'\n",
     "\n",
@@ -128,25 +129,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broadcast channels:  ['b', 'a', 'd', 'c']\n",
+      "broadcast channels:  ['a', 'b', 'd', 'c']\n",
       "queries:  ['E<> P1.pass']\n",
       "\n",
       " State [0]: ['P1.start']\n",
       "global_variables [0]: None\n",
       "Clock_constraints [0]: [t(0) - P1.t ≤ 0; P1.t - t(0) ≤ 10; ]\n",
-      "transitions [0]: a: P1 -> []; P1.start -> P1._id2; \n",
+      "transitions [0]: a: P1 -> ; P1.start -> P1._id2;\n",
       "-----------------------------------\n",
       "State [1]: ['P1._id2']\n",
       "global_variables [1]: None\n",
       "Clock_constraints [1]: [t(0) - P1.t ≤ -10; ]\n",
-      "transitions [1]: b: P1 -> []; P1._id2 -> P1.pass; \n",
+      "transitions [1]: b: P1 -> ; P1._id2 -> P1.pass;\n",
       "-----------------------------------\n",
       "State [2]: ['P1.pass']\n",
       "global_variables [2]: None\n",
@@ -182,15 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verify with for loop, time usage 9.287375211715698\n",
-      "Verify with multi-threads, time usage 1.6694567203521729\n"
+      "1.2.0\n",
+      "Verify with for loop, time usage 8.57197093963623\n",
+      "Verify with multi-threads, time usage 1.5158562660217285\n"
      ]
     }
    ],
@@ -199,9 +201,9 @@
     "import time\n",
     "import multiprocessing.dummy as mp\n",
     "\n",
-    "VERIFYTA_PATH = \"uppaal\\\\uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "print(pyu.__version__)\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
+    "pyu.set_verifyta_path(r\"C:\\Users\\Taco\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
     "\n",
     "model_path_list = ['demo.xml', 'demo_new.xml'] * 100\n",
     "trace_path_list = ['demo_trace.xtr', 'demo_new_grace.xtr'] * 100\n",
