--- a/src/test_demos/Demo3-Fault Diagnosis.ipynb
+++ b/src/test_demos/Demo3-Fault Diagnosis.ipynb
@@ -42,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', 'a', 'a'] can detect 'f'. Model A: True,  Model B: True.\n",
-      "['a', 'b', 'a'] can detect 'f'. Model A: False, Model B: True.\n",
+      "['a', 'a', 'a'] can identify 'f'. Model A: True,  Model B: True.\n",
+      "['a', 'b', 'a'] can identify 'f'. Model A: False, Model B: True.\n",
       "Model A is 3-diagnosable: False, reason: ['c', 'a', 'b', 'a'].\n",
       "Model B is 3-diagnosable: True.\n"
      ]
@@ -57,10 +57,10 @@
     "o1, o2 = ['a', 'a', 'a'], ['a', 'b', 'a']\n",
     "res1_a = m_a.fault_identification(o1, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "res1_b = m_b.fault_identification(o1, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "print(f\"{o1} can detect 'f'. Model A: {res1_a[0]},  Model B: {res1_b[0]}.\")\n",
+    "print(f\"{o1} can identify 'f'. Model A: {res1_a[0]},  Model B: {res1_b[0]}.\")\n",
     "res2_a = m_a.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "res2_b = m_b.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "print(f\"{o2} can detect 'f'. Model A: {res2_a[0]}, Model B: {res2_b[0]}.\")\n",
+    "print(f\"{o2} can identify 'f'. Model A: {res2_a[0]}, Model B: {res2_b[0]}.\")\n",
     "# n-diagnosability for fault 'f', for n=3\n",
     "res_a = m_a.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "res_b = m_b.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
