--- a/src/test_demos/Demo1-PipeNet.ipynb
+++ b/src/test_demos/Demo1-PipeNet.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Demo1 - PipeNet\n",
     "\n",
-    "We will use [demo_PipeNet.xml](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_integration/demo_PipeNet.xml) as an example to help understand how `pauppaal` can contribute to scientific research **partially observable** system."
+    "We will use [demo_PipeNet.xml](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_demos/demo_PipeNet.xml) as an example to help understand how `pauppaal` contributes to scientific research **partially observable** system, including:\n",
+    "- (1-3) Modeling the real-world observation into UPPAAL's Template, by constructing `observer_monitor` with builtin `pyuppaal.Monitors` that returns `pyuppaal.Template`;\n",
+    "- (3) Verify and get parsed counter example with `pyuppaal.SimTrace`.\n",
+    "- (4) Get communication graph to analyze the relationship among Timed Automata.\n",
+    "- (5) Find all patterns of a certain property."
    ]
   },
   {
@@ -15,7 +19,9 @@
    "source": [
     "### 1. Problem Description\n",
     "\n",
-    "There is a pipe-net that has invisible paths between the `Entry` and three different `Exits`. One day, two balls are put into the `Entry` at the global time (gclk) 0 and 1000, and are observed from `Exit1` and `Exit2` at the global time 500 and 1550. \n",
+    "There is a pipe-net that has invisible paths between the `Entry` and 3 different `Exits`. \n",
+    "\n",
+    "One day, two balls are put into the `Entry` at the global time (gclk) 0 and 1000, and are observed from `Exit1` and `Exit2` at the global time 500 and 1550. \n",
     "\n",
     "You want to know what happends to the balls -- all possible paths that can lead to such a input-observation."
    ]
@@ -26,11 +32,11 @@
    "source": [
     "### 2. Modeling the PipeNet\n",
     "\n",
-    "We have modeled the PipeNet with UPPAAL, you can download via [this link].\n",
+    "We have modeled the PipeNet with UPPAAL, you can download the UPPAAL Model: [demo_PipeNet.xml](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_demos/demo_PipeNet.xml).\n",
     "\n",
-    "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `T1_Min` to `T1_Max` seconds.\n",
+    "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `200` to `300` seconds.\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetModel.png width=400 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetModel.png width=400 />"
    ]
   },
   {
@@ -40,19 +46,22 @@
     "### 3. Load the Model and Set Inputs & Observations\n",
     "\n",
     "Now we will \n",
-    "1. add an `Input` template that puts the balls into the `Entry` at `gclk==0` and `gclk==1000`.\n",
-    "2. add an `Observet` template that indicates the observations from `Exit1` at `gclk==500`, and `Exit2` at `gclk==1550`.\n",
+    "1. Add an `Input` template that puts the balls into the `Entry` at `gclk==0` and `gclk==1000`.\n",
+    "2. Add an `Observer` template that indicates the observations from `Exit1` at `gclk==500`, and `Exit2` at `gclk==1550`.\n",
     "3. Get one possible pattern that simulates the inputs & observations.\n",
     "\n",
-    "In pyuppaal, inputs & observations are described by `TimedActions`, which is a class with three lists:\n",
-    "1. `actions: List[str]`, \n",
-    "2. `lower bounds: List[int]`, suggesting the guard and \n",
-    "3. `upper bounds: List[int]`, suggesting the invariant."
+    "<br><br>\n",
+    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetInput.png\" width=300 />\n",
+    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetObserver.png\" width=350 />\n",
+    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetModel.png\" width=350 />\n",
+    "<br><br>\n",
+    "\n",
+    "In This example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +124,8 @@
    "source": [
     "import pyuppaal as pyu\n",
     "\n",
-    "VERIFYTA_PATH = \"uppaal\\\\uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "# VERIFYTA_PATH = \"uppaal\\\\uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "VERIFYTA_PATH = r\"C:\\Users\\10262\\OneDrive\\PortableApps\\PortableApps\\Win_Linux-uppaal64-4.1.26\\bin-Windows\\verifyta.exe\"\n",
     "# set verifyta path\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
@@ -124,10 +134,10 @@
     "# save as a new file in order not to overwrite current file\n",
     "pipeNet = pipeNet.save_as(\"demo_PipeNet_new.xml\")\n",
     "\n",
-    "# Define the input.\n",
-    "inputs = [('input_ball', 0, 0), ('input_ball', 1000, 1000)]\n",
+    "# Define the input. (action_name, lower bound(guard), upper bound(invariant))\n",
+    "inputs = [('input_ball', 'gclk>=0', 'gclk<=0'), ('input_ball', 'gclk>=1000', 'gclk<=1000')]\n",
     "# Define the observation.\n",
-    "observations = [('exit1', 500, 500), ('exit2', 1550, 1550)]\n",
+    "observations = [('exit1', 'gclk>=500', 'gclk<=500'), ('exit2', 'gclk>=1550', 'gclk<=1550')]\n",
     "# Add input template.\n",
     "pipeNet.add_input_monitor(inputs)\n",
     "\n",
@@ -148,20 +158,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Input` and `Observation` template created by `pyuppaal`. The cache file `*_pattern.xml` can be found in the same directory of the input model.\n",
-    "<br><br>\n",
-    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetInput.png\" width=300 />\n",
-    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetObserver.png\" width=350 />\n",
-    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetModel.png\" width=350 />\n",
-    "<br><br>\n",
-    "\n",
-    "In This example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 4. Visualize the Architecture\n",
     "\n",
     "You can visualize the architecture by getting the communication graph in [mermaid](https://mermaid.live/) format. \n",
@@ -171,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,17 +198,17 @@
    "source": [
     "### 5. Find all patterns\n",
     "\n",
-    "You can get all possible patterns by the following code, and all possible patterns are shown in the figure below. \n",
+    "You can get all possible patterns by the following code, and all possible patterns are shown in the figure below. The cache file `tmp_find_all_patterns_id.xml` can be found in the same path of the model.\n",
     "\n",
     "1. The first observation at `Exit1` is suggested by the red line. \n",
     "2. The second observation at `Exit2` is suggested by 2 the green and yellow line, meaning there are two possible patterns for this observation.\n",
     "   \n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetPatterns.png width=300 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetPatterns.png width=300 />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,96 +239,6 @@
     "    print(f'pattern{i+1}', trace.untime_pattern)\n",
     "assert len(traces)==2"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "While extracting all patterns, pyuppaal constructs Monitors based on historical patterns. The figure below shows one of the monitors constructed by pyuppaal. You can get more details from the cache file `*_pattern.xml` that is in the same directory of the input model.\n",
-    "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetMonitor1.png width=100% />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Full Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
-      "```mermaid\n",
-      "graph TD\n",
-      "PipeNet\n",
-      "Input\n",
-      "Observer\n",
-      "Input--input_ball-->PipeNet\n",
-      "PipeNet--exit3-->Observer\n",
-      "PipeNet--exit2-->Observer\n",
-      "PipeNet--exit1-->Observer```\n",
-      "pattern1 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
-      "pattern2 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']\n",
-      "pattern1 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
-      "pattern2 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pyuppaal as pyu\n",
-    "\n",
-    "VERIFYTA_PATH = \"uppaal\\\\uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
-    "# set verifyta path\n",
-    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
-    "\n",
-    "# Load the `xml` model\n",
-    "pipeNet = pyu.UModel(\"demo_PipeNet.xml\")\n",
-    "# save as a new file in order not to overwrite current file\n",
-    "pipeNet = pipeNet.save_as(\"demo_PipeNet_new.xml\")\n",
-    "\n",
-    "# Define the input.\n",
-    "inputs = [('input_ball', 0, 0), ('input_ball', 1000, 1000)]\n",
-    "# Define the observation.\n",
-    "observations = [('exit1', 500, 500), ('exit2', 1550, 1550)]\n",
-    "# Add input template.\n",
-    "pipeNet.add_input_monitor(inputs)\n",
-    "# Add observation template.\n",
-    "# raise ValueError(\"这里别忘了添加focused actions\")\n",
-    "pipeNet.add_observer_monitor(observations, focused_actions=['exit1', 'exit2', 'exit3'])\n",
-    "\n",
-    "# Query whether the model can simulate the inputs & observations\n",
-    "pipeNet.queries = 'E<> Observer.pass'\n",
-    "# Get one possible trace.\n",
-    "trace = pipeNet.easy_verify()\n",
-    "print(\"pattern:\", trace.untime_pattern)\n",
-    "# Too long to show. Run it by yourself :)\n",
-    "# print(\"trace:\", trace)\n",
-    "\n",
-    "# visualize via https://mermaid.live/\n",
-    "cg = pipeNet.get_communication_graph(is_beautify=False)\n",
-    "print(cg)\n",
-    "\n",
-    "# Find all possible traces.\n",
-    "traces = pipeNet.find_all_patterns()\n",
-    "# print patterns.\n",
-    "for i, trace in enumerate(traces):\n",
-    "    print(f'pattern{i+1}', trace.untime_pattern)\n",
-    "\n",
-    "# alternative method with iterator\n",
-    "all_patterns_iter =  pipeNet.find_all_patterns_iter()\n",
-    "traces = list(all_patterns_iter)\n",
-    "for i, trace in enumerate(traces):\n",
-    "    print(f'pattern{i+1}', trace.untime_pattern)\n",
-    "assert len(traces)==2"
-   ]
   }
  ],
  "metadata": {
@@ -351,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.19"
   },
   "vscode": {
    "interpreter": {
