update doc of demo1

--- a/src/test_demos/Demo1-PipeNet.ipynb
+++ b/src/test_demos/Demo1-PipeNet.ipynb
@@ -50,13 +50,11 @@
     "2. Add an `Observer` template that indicates the observations from `Exit1` at `gclk==500`, and `Exit2` at `gclk==1550`.\n",
     "3. Get one possible pattern that simulates the inputs & observations.\n",
     "\n",
-    "<br><br>\n",
     "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetInput.png\" width=300 />\n",
     "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetObserver.png\" width=350 />\n",
-    "<img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetModel.png\" width=350 />\n",
-    "<br><br>\n",
+    "<br>\n",
     "\n",
-    "In This example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
+    "In this example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
    ]
   },
   {
@@ -136,7 +134,7 @@
     "\n",
     "# Define the input. (action_name, lower bound(guard), upper bound(invariant))\n",
     "inputs = [('input_ball', 'gclk>=0', 'gclk<=0'), ('input_ball', 'gclk>=1000', 'gclk<=1000')]\n",
-    "# Define the observation.\n",
+    "# Define the observation. (action_name, lower bound(guard), upper bound(invariant))\n",
     "observations = [('exit1', 'gclk>=500', 'gclk<=500'), ('exit2', 'gclk>=1550', 'gclk<=1550')]\n",
     "# Add input template.\n",
     "pipeNet.add_input_monitor(inputs)\n",
@@ -149,6 +147,7 @@
     "# Query whether the model can simulate the inputs & observations\n",
     "pipeNet.queries = 'E<> Observer.pass'\n",
     "# Get one possible trace.\n",
+    "# return as `pyuppaal.SimTrace`\n",
     "trace = pipeNet.easy_verify()\n",
     "print(\"pattern:\", trace.untime_pattern)\n",
     "print(\"trace:\", trace)"
@@ -162,7 +161,7 @@
     "\n",
     "You can visualize the architecture by getting the communication graph in [mermaid](https://mermaid.live/) format. \n",
     "\n",
-    "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=png)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
+    "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=jpg)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
    ]
   },
   {
@@ -233,7 +232,7 @@
     "assert len(traces)==2\n",
     "\n",
     "# alternative method with iterator\n",
-    "all_patterns_iter =  pipeNet.find_all_patterns_iter()\n",
+    "all_patterns_iter = pipeNet.find_all_patterns_iter()\n",
     "traces = list(all_patterns_iter)\n",
     "for i, trace in enumerate(traces):\n",
     "    print(f'pattern{i+1}', trace.untime_pattern)\n",
