prepare for demo 4

--- a/src/test_demos/Demo4-Scripted Model Construction.ipynb
+++ b/src/test_demos/Demo4-Scripted Model Construction.ipynb
@@ -6,11 +6,9 @@
    "source": [
     "# Demo4 - Scripted Model Construction\n",
     "\n",
-    "**Note: we are woking on CAV-2024 tool paper. The documentation will be updated to a structure similar to Demo1-PipeNet before 2024.4.1.**\n",
+    "This demo illustrates the usage of sripted model consturction of pyuppaal, constructing the [model](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_unit/constructed_model.xml) shown below:\n",
     "\n",
-    "This demo indicated the usage of pyuppaal.nta, constructing the [model](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_unit/constructed_model.xml) shown below:\n",
-    "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/scripted_model_building.png width=1000 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building.png width=800 />"
    ]
   },
   {
@@ -37,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Create New Model"
+    "## 2. Create New Model File with declaration."
    ]
   },
   {
@@ -54,8 +52,22 @@
     "broadcast chan a, b, c;\n",
     "int count = 0;\n",
     "int sender_count = 0;\n",
-    "const int rec_end = 10;\\n\"\"\"\n",
-    "\n",
+    "const int rec_end = 10;\\n\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Construct Receiver Template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# region: 构建tempaltes，一共两个\n",
     "# region: 构建第1个template\n",
     "template0 = Template(name=\"Receiver\",\n",
@@ -112,8 +124,22 @@
     "            test_code=\"count == -1;\")\n",
     "template0.edges = [e0, e1, e2, e3, e4, e5]\n",
     "# template0.branch_points = [bp0]\n",
-    "# endregion\n",
-    "\n",
+    "# endregion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Construct Sender Template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# region: 构建第2个template\n",
     "template1 = Template(name=\"Sender\",\n",
     "                        locations=[],\n",
